--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "ldjam.sln"
+    "dotnet.defaultSolution": "My project (2).sln"
 }
